primery change for hw-3

--- a/index.html
+++ b/index.html
@@ -18,45 +18,49 @@
   </head>
   <body>
     <header>
-      <!-- menu nav -->
-      <nav class="header-navigation">
-        <!--logo link-->
-        <a class="nav-logo-link link" href="./index.html"
-          >Web<span class="nav-studio-link">Studio</span></a
-        >
-        <ul class="header-navigation-list">
-          <li class="navigation-item">
-            <a class="nav-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="navigation-item">
-            <a class="nav-link link" href="">Portfolio</a>
-          </li>
-          <li class="navigation-item">
-            <a class="nav-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- contacts -->
-      <address class="header-address">
-        <ul class="header-address-list">
-          <li class="address-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <!-- menu nav -->
+        <nav class="header-navigation">
+          <!--logo link-->
+          <a class="nav-logo-link link" href="./index.html"
+            >Web<span class="nav-studio-link">Studio</span></a
+          >
+          <ul class="header-navigation-list">
+            <li class="navigation-item">
+              <a class="nav-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-item">
+              <a class="nav-link link" href="">Portfolio</a>
+            </li>
+            <li class="navigation-item">
+              <a class="nav-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- contacts -->
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- main section -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- section 2 -->
       <section>
