add fixing to header, hero, section 2, section 3
Will fix a section 2 = width;
section 3 = border, border-radius
section 4 = all...
footer = margin

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header-section">
       <div class="container header-container">
         <!-- menu nav -->
         <nav class="header-navigation">
@@ -66,84 +66,96 @@
       <section class="pupose-section">
         <div class="container purpose-container">
           <h2 class="visually-hidden">Header for section 2</h2>
-          <ul class="our-purpose-list">
-            <li class="purpose-item strategy-item">
-              <h3 class="purpose-title">Strategy</h3>
-              <p class="purpose-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="purpose-item punctuality-item">
-              <h3 class="purpose-title">Punctuality</h3>
-              <p class="purpose-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="purpose-item diligence-item">
-              <h3 class="purpose-title">Diligence</h3>
-              <p class="purpose-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="purpose-item technologies-item">
-              <h3 class="purpose-title">Technologies</h3>
-              <p class="purpose-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+          <div class="list-purpose-container">
+            <ul class="our-purpose-list">
+              <li class="purpose-item strategy-item">
+                <h3 class="purpose-title">Strategy</h3>
+                <p class="purpose-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="purpose-item punctuality-item">
+                <h3 class="purpose-title">Punctuality</h3>
+                <p class="purpose-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="purpose-item diligence-item">
+                <h3 class="purpose-title">Diligence</h3>
+                <p class="purpose-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="purpose-item technologies-item">
+                <h3 class="purpose-title">Technologies</h3>
+                <p class="purpose-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- section 3 -->
       <section class="oteam">
-        <div class="container oteam-container">
+        <div class="container">
           <h2 class="oteam-main-title">Our Team</h2>
-          <ul class="oteam-list">
-            <li class="oteam-item">
-              <img
-                class="oteam-loved"
-                src="./images/our-team/img-product-designer.jpg"
-                width="264"
-                alt="Product Designer"
-              />
-              <h3 class="our-team-title">Mark Guerrero</h3>
-              <p class="our-team-text">Product Designer</p>
-            </li>
-            <li class="oteam-item">
-              <img
-                class="oteam-loved"
-                src="./images/our-team/img-frontend-developer.jpg"
-                width="264"
-                alt="Frontend Developer"
-              />
-              <h3 class="our-team-title">Tom Ford</h3>
-              <p class="our-team-text">Frontend Developer</p>
-            </li>
-            <li class="oteam-item">
-              <img
-                class="oteam-loved"
-                src="./images/our-team/img-marketing.jpg"
-                width="264"
-                alt="Marketing"
-              />
-              <h3 class="our-team-title">Camila Garcia</h3>
-              <p class="our-team-text">Marketing</p>
-            </li>
-            <li class="oteam-item">
-              <img
-                class="oteam-loved"
-                src="./images/our-team/img-ui-designer.jpg"
-                width="264"
-                alt="UI Designer"
-              />
-              <h3 class="our-team-title">Daniel Wilson</h3>
-              <p class="our-team-text">UI Designer</p>
-            </li>
-          </ul>
+          <div class="oteam-container">
+            <ul class="oteam-list">
+              <li class="oteam-item">
+                <img
+                  class="oteam-loved"
+                  src="./images/our-team/img-product-designer.jpg"
+                  width="264"
+                  alt="Product Designer"
+                />
+                <div class="oteam-description">
+                  <h3 class="our-team-title">Mark Guerrero</h3>
+                  <p class="our-team-text">Product Designer</p>
+                </div>
+              </li>
+              <li class="oteam-item">
+                <img
+                  class="oteam-loved"
+                  src="./images/our-team/img-frontend-developer.jpg"
+                  width="264"
+                  alt="Frontend Developer"
+                />
+                <div class="oteam-description">
+                  <h3 class="our-team-title">Tom Ford</h3>
+                  <p class="our-team-text">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="oteam-item">
+                <img
+                  class="oteam-loved"
+                  src="./images/our-team/img-marketing.jpg"
+                  width="264"
+                  alt="Marketing"
+                />
+                <div class="oteam-description">
+                  <h3 class="our-team-title">Camila Garcia</h3>
+                  <p class="our-team-text">Marketing</p>
+                </div>
+              </li>
+              <li class="oteam-item">
+                <img
+                  class="oteam-loved"
+                  src="./images/our-team/img-ui-designer.jpg"
+                  width="264"
+                  alt="UI Designer"
+                />
+                <div class="oteam-description">
+                  <h3 class="our-team-title">Daniel Wilson</h3>
+                  <p class="our-team-text">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- section 4 -->
