css for section 4

--- a/index.html
+++ b/index.html
@@ -162,68 +162,82 @@
       <section class="oportfolio-section">
         <div class="container oportfolio-container">
           <h2 class="oportfolio-main-title">Our portfolio</h2>
-          <ul class="oportfolio-list">
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="app for banking"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Banking App</h3>
-              <p class="oportfolio-main-text">App</p>
-            </li>
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="phone payment"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Cashless Payment</h3>
-              <p class="oportfolio-main-text">Marketing</p>
-            </li>
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="laptop with telephone"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Meditation App</h3>
-              <p class="oportfolio-main-text">App</p>
-            </li>
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="driver in the car"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Taxi Service</h3>
-              <p class="oportfolio-main-text">Marketing</p>
-            </li>
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="phone images"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Screen Illustrations</h3>
-              <p class="oportfolio-main-text">Design</p>
-            </li>
-            <li class="oportfolio-item">
-              <img
-                class="oportfolio-loved"
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="girl during call"
-                width="360"
-              />
-              <h3 class="oportfolio-title">Online Courses</h3>
-              <p class="oportfolio-main-text">Marketing</p>
-            </li>
-          </ul>
+          <div class="container-portfolio-list">
+            <ul class="oportfolio-list">
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="app for banking"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Banking App</h3>
+                  <p class="oportfolio-main-text">App</p>
+                </div>
+              </li>
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="phone payment"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Cashless Payment</h3>
+                  <p class="oportfolio-main-text">Marketing</p>
+                </div>
+              </li>
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="laptop with telephone"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Meditation App</h3>
+                  <p class="oportfolio-main-text">App</p>
+                </div>
+              </li>
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="driver in the car"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Taxi Service</h3>
+                  <p class="oportfolio-main-text">Marketing</p>
+                </div>
+              </li>
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="phone images"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Screen Illustrations</h3>
+                  <p class="oportfolio-main-text">Design</p>
+                </div>
+              </li>
+              <li class="oportfolio-item">
+                <img
+                  class="oportfolio-loved"
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="girl during call"
+                  width="360"
+                />
+                <div class="oportfolio-description">
+                  <h3 class="oportfolio-title">Online Courses</h3>
+                  <p class="oportfolio-main-text">Marketing</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
