--- a/index.html
+++ b/index.html
@@ -63,33 +63,32 @@
         </div>
       </section>
       <!-- section 2 -->
-      <section class="pupose-section">
+      <section class="purpose-section">
         <div class="container purpose-container">
           <h2 class="visually-hidden">Header for section 2</h2>
-          <div class="list-purpose-container">
             <ul class="our-purpose-list">
-              <li class="purpose-item strategy-item">
+              <li class="purpose-item">
                 <h3 class="purpose-title">Strategy</h3>
                 <p class="purpose-text">
                   Our goal is to identify the business problem to walk away with
                   the perfect and creative solution.
                 </p>
               </li>
-              <li class="purpose-item punctuality-item">
+              <li class="purpose-item">
                 <h3 class="purpose-title">Punctuality</h3>
                 <p class="purpose-text">
                   Bring the key message to the brand's audience for the best
                   price within the shortest possible time.
                 </p>
               </li>
-              <li class="purpose-item diligence-item">
+              <li class="purpose-item">
                 <h3 class="purpose-title">Diligence</h3>
                 <p class="purpose-text">
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
                 </p>
               </li>
-              <li class="purpose-item technologies-item">
+              <li class="purpose-item">
                 <h3 class="purpose-title">Technologies</h3>
                 <p class="purpose-text">
                   Design practice focused on digital experiences. We bring forth
@@ -97,7 +96,6 @@
                 </p>
               </li>
             </ul>
-          </div>
         </div>
       </section>
       <!-- section 3 -->
